use material-ui

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,6 @@
-body {
-	font-family: "Avenir Next";
-}
+@import "../node_modules/material-ui-sass/material-ui";
+
+body {}
 
 h1, h2 {
 	font-weight: 200;
