--- a/style/main.scss
+++ b/style/main.scss
@@ -1,42 +1,120 @@
-body {
-	font-family: "Avenir Next";
+html {
+  height: 100%;
+  text-rendering: optimizeLegibility;
 }
 
-h1, h2 {
-	font-weight: 200;
-}
-
-h2 {
-	background: black;
-	color: white;
-	margin: 0;
-	padding: 5px 10px;
-}
-
-.master {
-	margin-right: 24px;
-	float: left;
-}
-
-.detail {
-	float: left;
-	img {
-		width: 600px;
-	}
-}
-
-.example-enter {
-  opacity: 0.01;
-  transition: opacity .5s ease-in;
-  &.example-enter-active {
-    opacity: 1;
+* {
+  box-sizing: border-box;
+  &::after, &::before {
+    box-sizing: border-box;
   }
 }
 
-.example-leave {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-  &.example-leave-active {
-    opacity: 0.01;
+body {
+  font-family: "Avenir Next";
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2 {
+  font-weight: 200;
+}
+
+h2 {
+  background: black;
+  color: white;
+  margin: 0;
+  padding: 5px 10px;
+}
+
+.master {
+  margin-right: 24px;
+  float: left;
+}
+
+.detail {
+  float: left;
+  img {
+    width: 600px;
+  }
+}
+
+.center-container {
+  background-color: #eee;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  min-height: 100%;
+}
+
+.center-item {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+
+  padding: 25px;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 5px 4px 3px #ddd;
+}
+
+.place-details-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.HolyGrail {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+
+.HolyGrail-header, .HolyGrail-footer {
+  flex: none;
+}
+
+.HolyGrail-body {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  padding: 1.5em;
+}
+
+.HolyGrail-content {
+  margin-top: 1.5em;
+}
+
+.HolyGrail-nav {
+  order: -1;
+  padding: 1em;
+  border-radius: 3px;
+  background: rgba(147, 128, 108, 0.1);
+}
+
+.HolyGrail-ads {
+  padding: 1em;
+  border-radius: 3px;
+  background: rgba(147, 128, 108, 0.1);
+}
+
+@media (min-width: 768px) {
+  .HolyGrail-body {
+    flex-direction: row;
+  }
+  .HolyGrail-content {
+    flex: 1;
+    padding: 0 2em;
+    margin: 0;
+  }
+  .HolyGrail-nav, .HolyGrail-ads {
+    flex: 0 0 12em;
   }
 }
