--- a/style/main.scss
+++ b/style/main.scss
@@ -1,29 +1,23 @@
 @import 'init';
 @import 'skeleton';
 
-h1, h2 {
-  font-weight: 200;
-}
-
-h2 {
-  background: black;
-  color: white;
-  margin: 0;
-  padding: 5px 10px;
-}
-
-.master {
-  margin-right: 24px;
-  float: left;
-}
-
-.detail {
-  float: left;
-  img {
-    width: 600px;
-  }
-}
-
 .text-center {
   text-align: center;
+}
+
+/* Shared
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.button {
+  border-radius: 100px;
+}
+
+/* Sections
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.section {
+  padding: 8rem 0 7rem;
+  text-align: center;
+}
+.section-heading,
+.section-description {
+  margin-bottom: 1.2rem;
 }
